# gerador_doc_caf

./: .gitignore  pyproject.toml  requirements.txt  setup.py
gerador_doc_caf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gerador_docs/: __init__.py  __main__.py  logger.py
gerador_docs/cli/: __init__.py  _types.py  runners.py  shell.py
gerador_docs/cli/parsers/: __init__.py  parser_caf.py  parser_db.py  parser_declaracao.py  parser_pag.py  parser_pocos.py
gerador_docs/errors/: __init__.py
gerador_docs/repository/: __init__.py  _abc.py
gerador_docs/templates/autodeclaracao/: parceria.docx  renda.docx
gerador_docs/templates/declaracao/: declaracao.docx  parceiro.docx
gerador_docs/tipos/: __init__.py  _typing.py  dados_pessoais.py  documents.py  endereco.py
tests/: conftest.py  test_class_cpf.py  test_dados_pessoais.py  test_endereco.py  test_rg.py
tests/tests_cli/: test_command_add.py  test_command_remove.py  test_parser_db.py
