[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs_sec"
version = "0.1.0"
description = "Programa auxiliar para gerar documentos para a emissão de CAF"
authors = [
    { name = "Erik Marques", email = "lucro.alternativo@outlook.com" },
]
readme = "README.md"  # Opcional, caso você tenha um
requires-python = ">=3.8"
dependencies = [
    # "pandas>=1.0.0",
    # "openpyxl",
]

[project.scripts]
docgen = "gerador_docs.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
# dev = ["pytest", "black"]

[project.classifiers]
# Você pode adicionar ou editar conforme a necessidade
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
