[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs_sec"
version = "0.1.0"
description = "Programa auxiliar para gerar documentos para a emissão de CAF"
authors = [
    { name = "Erik Marques", email = "lucro.alternativo@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich==14.0.0",
    "rich-argparse==1.7.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
docgen = "gerador_docs.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "pytest-mock==3.14.1"]

